--- a/Project.tex
+++ b/Project.tex
@@ -68,14 +68,23 @@ and the points of data.
 
 
 \section{Part 3: Application to Real Data}
-\subsection{Data Collection}
-[Explain the source and characteristics of the data you used.]
+In my comparison of Colley's Method and Massey's Method, I used data from the 
+2018-2019 NBA season. I found that Colley's method often ranks teams
+in a way we'd typically expect, by the W-L ratio. Massey's method is a better 
+way to represent team skill based on points scored.
 
-\subsection{Implementation}
-[Discuss how you applied the Colley and Massey methods to the real data.]
+\subsection{Colley's Method Results}
+Colley's method gives a team rating between 0 and 1 to indicate performance. 
+The lowest rating was Atlanta who went 0-2 in the data, and their rating 
+was 0.0204. The highest rating was Milwaukee, who went 2-0 in the data set. 
+Their rating was 1.0163.
 
-\subsection{Comparison of Results}
-[Compare the outcomes of both methods when applied to the data.]
+\subsection{Massey's Method Results}
+Massey's method gives unbounded rating results to account for performance/score 
+differences. The lowest rating was Atlanta again with -22.5. This time the 
+highest rating belongs to Charlotte, with a number of 25.833. Despite Charlotte going 1-1 
+in the sample data, they took their only win by a great margin. Charlotte beat 
+Orlando 120-88.
 
 \section{Part 4: Cutting Edge}
 \subsection{Overview of New Methods}
