--- a/Project.tex
+++ b/Project.tex
@@ -75,7 +75,7 @@ way to represent team skill based on points scored.
 
 \subsection{Colley's Method Results}
 Colley's method gives a team rating between 0 and 1 to indicate performance. 
-The lowest rating was Atlanta who went 0-2 in the data, and their rating 
+The lowest rating in my comparision data was Atlanta who went 0-2, and their rating 
 was 0.0204. The highest rating was Milwaukee, who went 2-0 in the data set. 
 Their rating was 1.0163.
 
@@ -134,6 +134,7 @@ the ability of a competitor is decomposed into the following components
 \begin{center}
     \includegraphics[width=0.8\textwidth]{driver skill.jpg}
     \end{center}
+The figure above depicts overall driver skill, taking the car model into account.
 
 \newpage
 \section*{References}
@@ -151,6 +152,6 @@ Laplace's Rule of Sucession:
 https://jonathanweisberg.org/post/inductive-logic-2/
 
 Method of Least Squares:
-https://www.investopedia.com/terms/l/least-squares-method.asp#:~:text=The%20least%20squares%20method%20is%20a%20statistical%20procedure%20to%20find,the%20behavior%20of%20dependent%20variables.
+https://www.investopedia.com/terms/l/least-squares-method.asptext=The%20least%20squares%20method%20is%20a%20statistical%20procedure%20to%20find,the%20behavior%20of%20dependent%20variables.
 \end{flushleft}
 \end{document}
